--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Be Vietnam Pro", sans-serif;
+  background-color: #f1f5f9;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@media (min-width: 1024px) {
+  body {
+    background-image: url(../src/assest/image-hero-desktop.webp);
+    background-repeat: no-repeat;
+    background-size: 650px;
+    background-position: 137% -10%;
+  }
+}
+
+@media (max-width: 768px) {
+  body {
+    background-image: url(../src/assest/image-hero-tablet.webp);
+    background-repeat: no-repeat;
+    background-size: 600px;
+    background-position: 250% -7%;
+  }
+}
+
+/* Small Screen */
+@media (max-width: 412px) {
+  body {
+    background-image: url(../src/assest/image-hero-mobile.webp);
+    background-repeat: no-repeat;
+    background-size: 400px;
+    background-position: 50% 21%;
+  }
 }
