--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,9 @@ body {
   body {
     background-image: url(../src/assest/image-hero-desktop.webp);
     background-repeat: no-repeat;
-    background-size: 650px;
-    background-position: 137% -10%;
+    background-size: 50%;
+    /* background-size: 650px; */
+    background-position: 130% -7%;
   }
 }
 
@@ -23,7 +24,8 @@ body {
   body {
     background-image: url(../src/assest/image-hero-tablet.webp);
     background-repeat: no-repeat;
-    background-size: 600px;
+    /* background-size: 600px; */
+    background-size: 80%;
     background-position: 250% -7%;
   }
 }
@@ -33,7 +35,8 @@ body {
   body {
     background-image: url(../src/assest/image-hero-mobile.webp);
     background-repeat: no-repeat;
-    background-size: 400px;
-    background-position: 50% 21%;
+    /* background-size: 400px; */
+    background-size: 90%;
+    background-position: 50% 23%;
   }
 }
