--- a/src/index.css
+++ b/src/index.css
@@ -10,13 +10,27 @@ body {
   background-color: #f1f5f9;
 }
 
+/* For large screens (lg) and above */
+
 @media (min-width: 1024px) {
   body {
     background-image: url(../src/assest/image-hero-desktop.webp);
     background-repeat: no-repeat;
     background-size: 50%;
     /* background-size: 650px; */
-    background-position: 130% -7%;
+    background-position: 129% -9%;
+  }
+}
+
+/* For medium screens (md) */
+
+/* my existing styles for tablets */
+@media (max-width: 1023px) and (min-width: 768px) {
+  body {
+    background-image: url(../src/assest/image-hero-tablet.webp);
+    background-repeat: no-repeat;
+    background-size: 80%;
+    background-position: 250% -7%;
   }
 }
 
@@ -30,8 +44,8 @@ body {
   }
 }
 
-/* Small Screen */
-@media (max-width: 412px) {
+/* Small Screen  412px*/
+@media (max-width: 767px) {
   body {
     background-image: url(../src/assest/image-hero-mobile.webp);
     background-repeat: no-repeat;
